--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "query-string": "^6.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.2",
