--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "classnames": "^2.2.6",
     "d3": "^5.15.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "jwt-decode": "^2.2.0",
